        PR c++/15745         * except.c (prepare_eh_type): Use type_decays_to.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@128174 138bc75d-0d04-0410-961f-82ee72b054a4